fix whitespace on landing categories; footer;

--- a/src/module/blog_page/presentation/ArticleItem/ArticleItem.module.css
+++ b/src/module/blog_page/presentation/ArticleItem/ArticleItem.module.css
@@ -18,6 +18,7 @@
 
 
 .blog img {
+    border-radius: 10px 10px 0 0;
     object-fit: cover;
     border: none;
     width: 410px;
