--- a/src/module/header/presentation/Header.module.css
+++ b/src/module/header/presentation/Header.module.css
@@ -215,6 +215,10 @@
     cursor: pointer;
 }
 
+.footer {
+    min-width: 320px;
+}
+
 /*.dark{*/
 /*    color: #FFFFFF;*/
 /*}*/
